Closed Bug 1841330 Opened 1 year ago Closed 10 months ago

WPT failure in css/css-grid/parsing/grid-area-computed.html

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox121 --- fixed

People

(Reporter: twisniewski, Assigned: boris)

References

(Blocks 1 open bug, )

Details

Attachments

(2 files)

We are presently failing just one test for:
https://wpt.fyi/results/css/css-grid/parsing/grid-area-computed.html

Property grid-column-start value 'span 1 i'
assert_equals: expected "span i" but got "span 1 i"

FWIW, WebKit seem to have fixed it by fixing this bug: https://bugs.webkit.org/show_bug.cgi?id=226694

No longer depends on: 1841329
Severity: -- → S3

When using span for grid-area, the default line number is 1. So we
omit it if possible, per shortest serialization principle.

https://drafts.csswg.org/css-grid/#grid-placement-span-int

Attachment #9363604 - Attachment description: Bug 1841330 - Fix the serialization of the computed value of grid-area. → Bug 1841330 - Fix the serialization of the computed value of <grid-line>.
Assignee: nobody → boris.chiou
Status: NEW → ASSIGNED
Attachment #9363604 - Attachment description: Bug 1841330 - Fix the serialization of the computed value of <grid-line>. → Bug 1841330 - Fix the serialization of <grid-line> when using span.

So we can avoid calling clone() in to_css().

Keywords: leave-open
Keywords: leave-open
Pushed by bchiou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e26dc4e7f443 Fix the serialization of <grid-line> when using span. r=emilio https://hg.mozilla.org/integration/autoland/rev/3b45d04f6865 Use CustomIdent for GridLine. r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/43219 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
Upstream PR merged by moz-wptsync-bot
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: