Bug 1841330 - Use CustomIdent for GridLine. r=emilio

So we can avoid calling clone() in to_css().

Differential Revision: https://phabricator.services.mozilla.com/D193838